Closed Bug 1111525 Opened 10 years ago Closed 10 years ago

the lineFlags outparam of nsILineIterator::GetLine is never used

Categories

(Core :: Layout: Block and Inline, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla37

People

(Reporter: jfkthame, Assigned: jfkthame)

Details

Attachments

(1 file)

nsILineIterator defines a couple of flag bits and returns them from GetLine() in its aLineFlags outparam.... but nobody cares about them.
AFAICS, this param is 100% redundant, so we're just wasting time returning it.
Attachment #8536458 - Flags: review?(roc)
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
https://hg.mozilla.org/mozilla-central/rev/6367ccd704d3
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: