Bug 1111525 - Remove unused lineFlags returned by nsILineIterator. r=roc